[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-dam-object-extractor"
version = "1.0.1"
description = "A ComfyUI node that uses NVIDIA's DAM model to identify objects in masked regions"
authors = [
    { name = "Irsal Khan", email = "arsalkhan963@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.51.3",
    "accelerate>=1.6.0",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "opencv-python>=4.11.0",
    "huggingface-hub>=0.30.2",
    "safetensors>=0.5.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Irsalistic/comfyui-dam-object-extractor"
BugTracker = "https://github.com/Irsalistic/comfyui-dam-object-extractor/issues"

[tool.comfy]
publisher = "@irsalkhan"



